--- a/CSS/content.css
+++ b/CSS/content.css
@@ -58,3 +58,13 @@
     padding: 5px;
     margin: 5px;
 }
+
+@media only screen and (max-width: 420px) {
+    .content {
+        grid-template-columns: 1fr;
+    }
+
+    .gboxes {
+        width: 100%;
+    }
+}
